terminal/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: terminal-service
  namespace: terminal-app
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 4000
  selector:
    app: terminal-app
